test_page_update_data/style.css
@import url("https://fonts.googleapis.com/css2?family=Mitr:wght@200;400;600&display=swap");
:root{
    --main-color:#FF5C8D;
    --second-color: #524A4E;
    --background-color: white;
    --font-color: white;
}

body {
  margin: 0px;
  /* padding-top: 10px; */
}
.containner {
  display: flex;
  align-items: flex-start;
}
.menu {
  text-align: center;
  width: 80px;
  background: var(--main-color);
  color: white;
}

/* *******************Project Grid*********************** */
.grid-main {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  /* background: #9bc57e; */
  grid-auto-rows: minmax(50px, auto);
  grid-gap: 10px;
  flex-grow: 1;
}
.grid-proj-item {
  background: white;
}
.proj-box {
  width: 300px;
  min-height: 250px;
  margin: auto;
  /* background-color: #ee4864; */
  color: white;
}

/* *******************Task Grid*********************** */
.grid-task {
  display: grid;
  /* background: #9bc57e; */
  grid-auto-rows: minmax(80px, auto);
  grid-gap: 20px;
  width: 90%;
  margin: auto;
}
.grid-task-item {
  display: grid;
  grid-template-columns: 6fr 1fr 1fr;
  background-color: pink;
  border: 1px solid #ffc0cb;
  padding-top: 10px;
  padding-left: 8px;
  padding-right: 10px;
  border-radius: 10px;
}
/* .task-name-box {
  background: white;
}
.task-status-box {
  background: white;
}
.task-menu-box {
  background: white;
} */
.proj-status {
  height: 100px;
}

/*  from project_box css */
.project-box {
  width: 300px;
  min-height: 250px;
  background-color: rgb(229, 134, 182);
  padding: 16px;
  border-radius: 20px;
  margin: auto;
  overflow-wrap: break-word;
}
.progress {
  width: 90%;
  background-color: #ddd;
}

.progress-done {
  width: 70%;
  height: 15px;
  background-color: #e4ee56;
  text-align: center;
  line-height: 32px;
  color: black;
}
.project-btn {
  background-image: url("images/add.png");
  background-size: cover;
  
  border-radius: 10px;
  width: 100%;
  height: 50px;
  color: snow;
}
.edit-project-btn {
  background-color: rgb(223, 112, 75);
  border-radius: 10px;
  width: 100%;
  height: 100%;
  color: snow;
}
/* from form css */

* {
  margin: 0;
  padding: 0;
}

.popup {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.4);
  z-index: 10;

  display: none;
  justify-content: center;
  align-items: center;
}

.popup .main {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  width: 500px;
  gap: 16px;
  padding: 16px;
  background-color: white;
  border-radius: 8px;
}

.popup form {
  display: flex;
  flex-direction: column;
  gap: 16px;
  width: 100%;
}

.popup label,
input,
textarea {
  font-size: 24px;
  resize: none;
  
}

.popup .button-container {
  display: flex;
  justify-content: flex-end;
  gap: 16px;
  width: 100%;
}

.popup .success-button {
  padding: 8px;
  border: none;
  border-radius: 8px;
  color: white;
  font-size: 24px;
  background-color: limegreen;
}

.popup .success-button:hover {
  background-color: green;
}
.popup .secondary-button {
  padding: 8px;
  border: none;
  border-radius: 8px;
  color: white;
  font-size: 24px;
  background-color: gray;
}

.popup .secondary-button:hover {
  background-color: dimgray;
}

/* from task css */
.box {
  width: 95%;
  /* max-width: 850px; */
  height: fit-content;
  background-color: pink;
  border: 1px solid #ffc0cb;
  margin-top: 13px;
  margin-left: 20px;
  padding-top: 10px;
  padding-left: 8px;
  padding-right: 10px;
  border-radius: 10px;
  margin: auto;
}
h2 {
  font-size: medium;
  font-weight: 400;
  margin: 20px;
}
h1 {
  margin: 20px;
  font-size: larger;
}

body {
  font-family: "Mitr", sans-serif;
}
.taskheader {
  font-size: large;
  background-color: aliceblue;
  border-radius: 5px;
  padding-left: 5px;
  padding-right: 5px;
  width: 80%;

  text-align: left;
  /* position: relative; */
}
.task-description {
  margin-right: 5%;
  margin-top: 5px;
  font-size: small;
  color: darkslategrey;
}
#status {
  font-size: medium;
  font-family: "Mitr", "sans-serif";
  width: 150px;
  border-radius: 9px;
  align-content: flex-end;
  margin-top: 10px;
  margin-right: 5%;
}
.flex-container {
  display: flex;

  text-align: left;
}
.edit,
.delete {
  width: 30px;
  height: 30px;

  margin: 5px;

  font-family: "Mitr", "sans-serif";
  font-size: medium;
  border-color: #d87093;
  border-radius: 10px;
  padding: 1.5px;
  align-content: center;

  position: relative;
  /* position: absolute; */
}
.right-button {
  margin-left: 30px;
  position: relative;
}
.edit :hover {
  border-color: pink;
}
.delete :hover {
  border-color: red;
}
.add-button {
  margin: 20px;
  text-align: center;
  align-self: center;
  color: pink;
}
.add-button:hover {
  border-color: palevioletred;
}
.content {
  width: 98%;
  max-width: 850px;
  align-content: center;
  align-items: center;
  text-align: center;
}

/* *******************Media Query*********************** */
@media (max-width: 1080px) {
  .grid-main {
    grid-template-columns: repeat(2, 1fr);
  }
  .grid-task {
    width: 100%;
  }
}

@media (max-width: 768px) {
  .grid-main {
    grid-template-columns: 1fr;
  }
  .menu {
    width: 100%;
  }
  .containner {
    display: block;
  }
  .proj-box {
    width: 80%;
  }
  .grid-task-item {
    grid-template-columns: repeat(2, 1fr);
  }
  .task-name-box {
    grid-column: 1/3;
  }
  .task-status-box {
    grid-column: 1/2;
  }
  .task-menu-box {
    grid-column: 2/3;
  }
  .right-button {
    width: 100%;
  }
  .project-box {
    width: 80%;
  }
  .task-menu-box{
    justify-self: end;
  }
}

